# publicdataprotal

./: .gitignore  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  example.env  pyproject.toml  read_docx.py  requirements.txt  test_analysis_logic.py  test_kma_api.py  test_umbrella_reminder.py  weather_backup.db
api/: main.py  schemas.py
core/: config.py  constants.py  database.py  exceptions.py  google_calendar.py  utils.py  weather_analyzer.py
ui/: app.py
